tests/baselines/reference/extensionLoadingPriority(moduleresolution=node16).errors.txt
error TS5110: Option 'module' must be set to 'Node16' when option 'moduleResolution' is set to 'Node16'.
/project/b.ts(2,17): error TS2835: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './dir.js'?


!!! error TS5110: Option 'module' must be set to 'Node16' when option 'moduleResolution' is set to 'Node16'.
==== /project/a.js (0 errors) ====
    export default "a.js";
    
==== /project/a.js.js (0 errors) ====
    export default "a.js.js";
    
==== /project/dir/index.ts (0 errors) ====
    export default "dir/index.ts";
    
==== /project/dir.js (0 errors) ====
    export default "dir.js";
    
==== /project/b.ts (1 errors) ====
    import a from "./a.js";
    import dir from "./dir";
                    ~~~~~~~
!!! error TS2835: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './dir.js'?
    